--- a/statement.html
+++ b/statement.html
@@ -32,7 +32,7 @@
         <a class="btn btn-primary" href="index.html"><b>HOME</b></a>
       </div>
         <h2>
-         <b>I have always been fascinated by the indigenous people and their history. I understood the American indigenous women's condition as a universal condition of all women. "Growing Up" is a project dedicated to the American native women who overcome all oppression to sustain life through generations. In my project, I emphasized different women's expressions in some stages of their lives to make women recognize the common feelings experienced throughout their lives.
+         <b>I have always been fascinated by the indigenous people and their history. I understood the American indigenous women's condition as a universal condition of all women. "Growing Up" is a project dedicated to the American native women who overcome all oppression to sustain life through generations. In my project, I emphasized different women's expressions in some stages of their lives to make women recognize the common feelings experienced throughout the years.
       </b>
            </h2>
       <h2><b>
